--- a/tutorial05-sample.html
+++ b/tutorial05-sample.html
@@ -88,6 +88,7 @@
           <button>Wink</button>
           <button>Shrug</button>
           <button>Blush</button>
+          <button>Meow</button>
         </div>
         <div>
           <p>Tacos actually microdosing, pour-over semiotics banjo chicharrones retro fanny pack portland everyday carry vinyl typewriter. Tacos PBR&B pork belly, everyday carry ennui pickled sriracha normcore hashtag polaroid single-origin coffee cold-pressed. PBR&B tattooed trust fund twee, leggings salvia iPhone photo booth health goth gastropub hammock.</p>
